--- a/source/_posts/2013-04-06-novajoj.markdown
+++ b/source/_posts/2013-04-06-novajoj.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Novaĵoj"
 date: 2013-04-06 03:07
 comments: true
-categories: Esperanto novaĵo twitter vendejo muziko Interreto
+categories: Esperanto novaĵo twitter vendejo muziko Interreto renkontiĝo
 ---
 
 
@@ -20,7 +20,15 @@ krei novan konton nur por Esperanto. Bonvolu sekvu min tra
 Antaŭ kelkaj tagoj mi mendis 4 ĉemizojn kun emblemoj de Esperanto ĉe interreta vendejo
 [Tutmonde](http://tutmonde.org).
 Ili eĉ [skiribis](https://twitter.com/tutmonde/status/319331721378148352) pri tio en Twitter.
-Nun mi ĝoje atendas mian mendon.
+Nun mi ĝoje atendas mian mendon =)
+
+## Rentontiĝoj
+
+Mi havos ferio en Majo, do mi registriĝis en [Arama Jalto](renkotiĝo). Se
+mi aĉetos fervojajn biletojn ĝi estos mia unua granda renkontiĝo ekster mia urbo.
+Alia afero estas [Roskilde muzika festivalo](http://roskilde.festoklubo.dk/) en Danio.
+Ankaŭ mi registriĝis tie, do vi povas vidi mian nomon en [la listo de aliĝintoj ](http://roskilde.festoklubo.dk/aligintojrf13).
+Sed mi ne certas ankoraŭ, ke mi flugos tien. Unue mi devas ricevi ŝengenan vizon.
 
 ## Bona kanto de Martin
 
