--- a/source/_posts/2013-04-06-novajoj.markdown
+++ b/source/_posts/2013-04-06-novajoj.markdown
@@ -32,7 +32,7 @@ Sed mi ne certas ankoraŭ, ke mi flugos tien. Unue mi devas ricevi ŝengenan viz
 
 ## Bona kanto de Martin
 
-Ĵus mi trovis bonegan muzikan videon de Martin Wiese(kontisto de Persone). Mi tre
+Ĵus mi trovis bonegan muzikan videon de Martin Wiese(kantisto de Persone). Mi tre
 ŝatas Persone, kaj ĉi tiu kanto kun interesa filmo ankaŭ estas tre bona. Aŭskultu ĝin!
 
 <iframe width="640" height="360" src="http://www.youtube.com/embed/gWiH8BlpU0U" frameborder="0" allowfullscreen></iframe>
