Malluma flanko de Esperanto

--- a/source/_posts/2013-04-06-novajoj.markdown
+++ b/source/_posts/2013-04-06-novajoj.markdown
@@ -22,7 +22,7 @@ Antaŭ kelkaj tagoj mi mendis 4 ĉemizojn kun emblemoj de Esperanto ĉe interret
 Ili eĉ [skiribis](https://twitter.com/tutmonde/status/319331721378148352) pri tio en Twitter.
 Nun mi ĝoje atendas mian mendon =)
 
-## Rentontiĝoj
+## Renkontiĝoj
 
 Mi havos ferio en Majo, do mi registriĝis en [Arama Jalto](renkotiĝo). Se
 mi aĉetos fervojajn biletojn ĝi estos mia unua granda renkontiĝo ekster mia urbo.
